# house_pricing_lr

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
